--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,16 @@
 .App {
   text-align: center;
+
 }
 
+body{
+  display: flex;
+  flex-flow: column;
+  min-height: 100vh;
+  background: linear-gradient(-45deg, #2b2b2b, #383838, #3e3e3e);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
