--- a/src/Routes/MyCharacter/MyCharacter.module.scss
+++ b/src/Routes/MyCharacter/MyCharacter.module.scss
@@ -24,6 +24,15 @@
       justify-content: center;
       align-items: center;
 
+      &__circle{
+        width: 35vh;
+        height: 35vh;
+        background-color: rgb(110, 110, 110);
+        position: absolute;
+        z-index: -1;
+        border-radius: 50%;
+      }
+
       &__buttons{
         background-color: red;
       }
@@ -41,6 +50,10 @@
         height: 65px;
         object-fit: contain;
         margin-left: -6px
+      }
+
+      h3{
+        color: white;
       }
 
       &__pants {
